--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* Arrived here from TicTacToe.jsx */
+/* 
+- in body, after -moz-osx-font-smoothing, add (background: #0f1B21;)
+- Go to TicTacToe.css for Next Steps...
+*/
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #0f1B21;
 }
 
 code {
